@@ -14,8 +14,9 @@ CURRENT VERSION:
 
 1.1.0.7
 
-	UTF-8 support for publishing new maps
+	spaces in names support for publishing new maps
         fixed nullpointer when you close the MapStore right after fetching a new XML file
+        mapeditor saved map version inside map file
 
 1.1.0.6
 
